--- a/EDesign/EDesign.ioc
+++ b/EDesign/EDesign.ioc
@@ -13,7 +13,7 @@ ADC1.EnableInjectedConversion=ENABLE
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
-ADC1.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Offset-5\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EnableInjectedConversion,InjNumberOfConversion,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3
+ADC1.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Offset-5\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EnableInjectedConversion,InjNumberOfConversion,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3,SubFamily
 ADC1.InjNumberOfConversion=0
 ADC1.LowPowerAutoWait=DISABLE
 ADC1.NbrOfConversion=1
@@ -25,6 +25,7 @@ ADC1.Rank-5\#ChannelRegularConversion=1
 ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.ScanConvMode=ADC_SCAN_DISABLE
+ADC1.SubFamily=STM32F334x8
 ADC1.master=1
 File.Version=6
 KeepUserPlacement=true
@@ -33,8 +34,9 @@ Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP4=TIM2
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F334R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -63,13 +65,14 @@ Mcu.Pin29=PB8
 Mcu.Pin3=PF0 / OSC_IN
 Mcu.Pin30=PB9
 Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PF1 / OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PA0
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=32
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334R8Tx
@@ -197,7 +200,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12outputFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -239,5 +242,7 @@ USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART1.WordLength=WORDLENGTH_8B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F334R8
 boardIOC=true
