--- a/EDesign/EDesign.ioc
+++ b/EDesign/EDesign.ioc
@@ -13,7 +13,7 @@ ADC1.EnableInjectedConversion=ENABLE
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
-ADC1.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Offset-5\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EnableInjectedConversion,InjNumberOfConversion,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3,SubFamily
+ADC1.IPParameters=Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,Offset-5\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,Overrun,LowPowerAutoWait,EnableRegularConversion,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,EnableInjectedConversion,InjNumberOfConversion,EnableAnalogWatchDog1,EnableAnalogWatchDog2,EnableAnalogWatchDog3,master,SubFamily
 ADC1.InjNumberOfConversion=0
 ADC1.LowPowerAutoWait=DISABLE
 ADC1.NbrOfConversion=1
@@ -41,38 +41,41 @@ Mcu.Name=STM32F334R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14 / OSC32_IN
-Mcu.Pin10=PA3
-Mcu.Pin11=PA4
-Mcu.Pin12=PA5
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB1
-Mcu.Pin18=PB10
-Mcu.Pin19=PB13
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA5
+Mcu.Pin15=PA6
+Mcu.Pin16=PA7
+Mcu.Pin17=PC4
+Mcu.Pin18=PC5
+Mcu.Pin19=PB0
 Mcu.Pin2=PC15 / OSC32_OUT
-Mcu.Pin20=PC7
-Mcu.Pin21=PA8
-Mcu.Pin22=PA9
-Mcu.Pin23=PA13
-Mcu.Pin24=PA14
-Mcu.Pin25=PB3
-Mcu.Pin26=PB4
-Mcu.Pin27=PB5
-Mcu.Pin28=PB6
-Mcu.Pin29=PB8
+Mcu.Pin20=PB1
+Mcu.Pin21=PB10
+Mcu.Pin22=PB13
+Mcu.Pin23=PC7
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PB3
+Mcu.Pin29=PB4
 Mcu.Pin3=PF0 / OSC_IN
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin30=PB5
+Mcu.Pin31=PB6
+Mcu.Pin32=PB8
+Mcu.Pin33=PB9
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PF1 / OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
-Mcu.Pin7=PA0
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=33
+Mcu.Pin7=PC2
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334R8Tx
@@ -80,6 +83,7 @@ MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true
@@ -87,6 +91,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
 PA0.Locked=true
@@ -123,6 +128,10 @@ PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_ModeDefaultEXTI
+PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB0.Locked=true
+PB0.Signal=GPXTI0
 PB1.Mode=IN12-Single-Ended
 PB1.Signal=ADC1_IN12
 PB10.Locked=true
@@ -156,6 +165,8 @@ PC15\ /\ OSC32_OUT.GPIOParameters=GPIO_Label
 PC15\ /\ OSC32_OUT.GPIO_Label=RCC_OSC32_OUT
 PC15\ /\ OSC32_OUT.Locked=true
 PC15\ /\ OSC32_OUT.Signal=RCC_OSC32_OUT
+PC2.Signal=ADCx_IN8
+PC3.Signal=ADCx_IN9
 PC4.Mode=Asynchronous
 PC4.Signal=USART1_TX
 PC5.Mode=Asynchronous
@@ -234,8 +245,18 @@ RCC.TIM1Freq_Value=64000000
 RCC.TIM2Freq_Value=64000000
 RCC.USART1Freq_Value=32000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.ADCx_IN8.0=ADC1_IN8,IN8-Single-Ended
+SH.ADCx_IN8.ConfNb=1
+SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
+SH.ADCx_IN9.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.CounterMode=TIM_COUNTERMODE_DOWN
+TIM2.IPParameters=CounterMode,Period,AutoReloadPreload
+TIM2.Period=16000
 USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,WordLength
 USART1.VirtualMode-Asynchronous=VM_ASYNC
