--- a/EDesign/EDesign.ioc
+++ b/EDesign/EDesign.ioc
@@ -191,7 +191,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:/STMRepo/STM32Cube_FW_F3_V1.9.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F334R8Tx
