--- a/EDesign/EDesign.ioc
+++ b/EDesign/EDesign.ioc
@@ -50,32 +50,33 @@ Mcu.Pin15=PA6
 Mcu.Pin16=PA7
 Mcu.Pin17=PC4
 Mcu.Pin18=PC5
-Mcu.Pin19=PB0
+Mcu.Pin19=PB1
 Mcu.Pin2=PC15 / OSC32_OUT
-Mcu.Pin20=PB1
-Mcu.Pin21=PB10
-Mcu.Pin22=PB13
-Mcu.Pin23=PC7
-Mcu.Pin24=PA8
-Mcu.Pin25=PA9
-Mcu.Pin26=PA13
-Mcu.Pin27=PA14
-Mcu.Pin28=PB3
-Mcu.Pin29=PB4
+Mcu.Pin20=PB10
+Mcu.Pin21=PB13
+Mcu.Pin22=PC7
+Mcu.Pin23=PA8
+Mcu.Pin24=PA9
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PC10
+Mcu.Pin28=PC12
+Mcu.Pin29=PB3
 Mcu.Pin3=PF0 / OSC_IN
-Mcu.Pin30=PB5
-Mcu.Pin31=PB6
-Mcu.Pin32=PB8
-Mcu.Pin33=PB9
-Mcu.Pin34=VP_SYS_VS_Systick
-Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin30=PB4
+Mcu.Pin31=PB5
+Mcu.Pin32=PB6
+Mcu.Pin33=PB8
+Mcu.Pin34=PB9
+Mcu.Pin35=VP_SYS_VS_Systick
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PF1 / OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0
-Mcu.PinsNb=36
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334R8Tx
@@ -128,10 +129,6 @@ PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.Locked=true
 PA9.Signal=GPIO_Output
-PB0.GPIOParameters=GPIO_ModeDefaultEXTI
-PB0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-PB0.Locked=true
-PB0.Signal=GPXTI0
 PB1.Mode=IN12-Single-Ended
 PB1.Signal=ADC1_IN12
 PB10.Locked=true
@@ -154,6 +151,12 @@ PC0.Locked=true
 PC0.Signal=GPIO_Input
 PC1.Locked=true
 PC1.Signal=GPIO_Input
+PC10.GPIOParameters=GPIO_ModeDefaultEXTI
+PC10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC10.Locked=true
+PC10.Signal=GPXTI10
+PC12.Locked=true
+PC12.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -249,8 +252,8 @@ SH.ADCx_IN8.0=ADC1_IN8,IN8-Single-Ended
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
 SH.ADCx_IN9.ConfNb=1
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
