--- a/EDesign/EDesign.ioc
+++ b/EDesign/EDesign.ioc
@@ -33,10 +33,11 @@ Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP3=RTC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F334R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -57,26 +58,30 @@ Mcu.Pin21=PB13
 Mcu.Pin22=PC7
 Mcu.Pin23=PA8
 Mcu.Pin24=PA9
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PC10
-Mcu.Pin28=PC12
-Mcu.Pin29=PB3
+Mcu.Pin25=PA10
+Mcu.Pin26=PA13
+Mcu.Pin27=PA14
+Mcu.Pin28=PC10
+Mcu.Pin29=PC12
 Mcu.Pin3=PF0 / OSC_IN
-Mcu.Pin30=PB4
-Mcu.Pin31=PB5
-Mcu.Pin32=PB6
-Mcu.Pin33=PB8
-Mcu.Pin34=PB9
-Mcu.Pin35=VP_SYS_VS_Systick
-Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin30=PB3
+Mcu.Pin31=PB4
+Mcu.Pin32=PB5
+Mcu.Pin33=PB6
+Mcu.Pin34=PB8
+Mcu.Pin35=PB9
+Mcu.Pin36=VP_RTC_VS_RTC_Activate
+Mcu.Pin37=VP_RTC_VS_RTC_Calendar
+Mcu.Pin38=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PF1 / OSC_OUT
+Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0
-Mcu.PinsNb=37
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334R8Tx
@@ -90,6 +95,7 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+NVIC.RTC_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -99,6 +105,10 @@ PA0.Locked=true
 PA0.Signal=GPIO_Input
 PA1.Locked=true
 PA1.Signal=GPIO_Input
+PA10.GPIOParameters=GPIO_ModeDefaultEXTI
+PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA10.Locked=true
+PA10.Signal=GPXTI10
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -151,10 +161,8 @@ PC0.Locked=true
 PC0.Signal=GPIO_Input
 PC1.Locked=true
 PC1.Signal=GPIO_Input
-PC10.GPIOParameters=GPIO_ModeDefaultEXTI
-PC10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PC10.Locked=true
-PC10.Signal=GPXTI10
+PC10.Signal=GPIO_Output
 PC12.Locked=true
 PC12.Signal=GPIO_Output
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -189,7 +197,7 @@ PF0\ /\ OSC_IN.Signal=RCC_OSC_IN
 PF1\ /\ OSC_OUT.Locked=true
 PF1\ /\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
@@ -214,7 +222,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true
 RCC.ADC12outputFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -248,6 +256,8 @@ RCC.TIM1Freq_Value=64000000
 RCC.TIM2Freq_Value=64000000
 RCC.USART1Freq_Value=32000000
 RCC.VCOOutput2Freq_Value=4000000
+RTC.IPParameters=WakeUpClock-WakeUp
+RTC.WakeUpClock-WakeUp=RTC_WAKEUPCLOCK_CK_SPRE_16BITS
 SH.ADCx_IN8.0=ADC1_IN8,IN8-Single-Ended
 SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9-Single-Ended
@@ -264,6 +274,12 @@ USART1.BaudRate=115200
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate,WordLength
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART1.WordLength=WORDLENGTH_8B
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
