--- a/EDesign/EDesign.ioc
+++ b/EDesign/EDesign.ioc
@@ -31,13 +31,14 @@ File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F334R(6-8)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -61,27 +62,29 @@ Mcu.Pin24=PA9
 Mcu.Pin25=PA10
 Mcu.Pin26=PA13
 Mcu.Pin27=PA14
-Mcu.Pin28=PC10
-Mcu.Pin29=PC12
+Mcu.Pin28=PA15
+Mcu.Pin29=PC10
 Mcu.Pin3=PF0 / OSC_IN
-Mcu.Pin30=PB3
-Mcu.Pin31=PB4
-Mcu.Pin32=PB5
-Mcu.Pin33=PB6
-Mcu.Pin34=PB8
-Mcu.Pin35=PB9
-Mcu.Pin36=VP_RTC_VS_RTC_Activate
-Mcu.Pin37=VP_RTC_VS_RTC_Calendar
-Mcu.Pin38=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin39=VP_SYS_VS_Systick
+Mcu.Pin30=PC12
+Mcu.Pin31=PB3
+Mcu.Pin32=PB4
+Mcu.Pin33=PB5
+Mcu.Pin34=PB6
+Mcu.Pin35=PB7
+Mcu.Pin36=PB8
+Mcu.Pin37=PB9
+Mcu.Pin38=VP_RTC_VS_RTC_Activate
+Mcu.Pin39=VP_RTC_VS_RTC_Calendar
 Mcu.Pin4=PF1 / OSC_OUT
-Mcu.Pin40=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin40=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin41=VP_SYS_VS_Systick
+Mcu.Pin42=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA0
-Mcu.PinsNb=41
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334R8Tx
@@ -91,6 +94,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:true
@@ -101,10 +106,18 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
+PA0.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA0.GPIO_PuPd=GPIO_PULLUP
 PA0.Locked=true
-PA0.Signal=GPIO_Input
+PA0.PinState=GPIO_PIN_SET
+PA0.Signal=GPIO_Output
+PA1.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
-PA1.Signal=GPIO_Input
+PA1.PinState=GPIO_PIN_SET
+PA1.Signal=GPIO_Output
 PA10.GPIOParameters=GPIO_ModeDefaultEXTI
 PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA10.Locked=true
@@ -117,6 +130,8 @@ PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Mode=I2C
+PA15.Signal=I2C1_SCL
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=USART_TX
 PA2.Locked=true
@@ -125,8 +140,12 @@ PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PA4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
-PA4.Signal=GPIO_Input
+PA4.PinState=GPIO_PIN_SET
+PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=LD2 [Green Led]
 PA5.Locked=true
@@ -153,6 +172,8 @@ PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PB8.Locked=true
 PB8.Signal=GPIO_Input
 PB9.Locked=true
@@ -197,7 +218,7 @@ PF0\ /\ OSC_IN.Signal=RCC_OSC_IN
 PF1\ /\ OSC_OUT.Locked=true
 PF1\ /\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
@@ -222,7 +243,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADC12outputFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
