--- a/EDesign/GeyserSystem.ioc
+++ b/EDesign/GeyserSystem.ioc
@@ -173,10 +173,12 @@ PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14\ /\ OSC32_IN.Locked=true
+PC14\ /\ OSC32_IN.Mode=LSE-External-Oscillator
 PC14\ /\ OSC32_IN.Signal=RCC_OSC32_IN
 PC15\ /\ OSC32_OUT.GPIOParameters=GPIO_Label
 PC15\ /\ OSC32_OUT.GPIO_Label=RCC_OSC32_OUT
 PC15\ /\ OSC32_OUT.Locked=true
+PC15\ /\ OSC32_OUT.Mode=LSE-External-Oscillator
 PC15\ /\ OSC32_OUT.Signal=RCC_OSC32_OUT
 PC2.Signal=ADCx_IN8
 PC3.Signal=ADCx_IN9
@@ -247,14 +249,14 @@ RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
-RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,VCOOutput2Freq_Value
-RCC.LSE_VALUE=32768
+RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCClockSelection,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
 RCC.MCOFreq_Value=64000000
 RCC.PLLCLKFreq_Value=64000000
 RCC.PLLMCOFreq_Value=64000000
 RCC.PLLMUL=RCC_PLL_MUL16
-RCC.RTCFreq_Value=40000
+RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
+RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=250000
 RCC.SYSCLKFreq_VALUE=64000000
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
